--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel=stylesheet href=style.css>
-    <link rel=icon href=logo.png>
+    	<meta charset="UTF-8">	
+	<meta charset="description" content="Edelweiss Cosmetics" je visoko kvalitetna kozmetika
+	koja se proizvodi u Italiji i Nemačkoj. 
+	Niska cena za visoki kvalitet je politika kompanije. 
+	Svi proizvodi pre puštanja u prodaju su laboratoriski testirani.
+	Testiranja se NE vrše na životinjama. 
+	Mnogi proizvodi su hipoalergijski, vegetabilni, 
+	bez parabena i HALAL sertifikatom.
+	<meta name="keywords" content="Edelweiss Cosmetics,
+	puder,
+	maskara,
+	karmin,
+	senke,
+	rumenilo,
+	hajlajter">
+	<meta name="author" content="Edelweiss Cosmetics">
+	<link rel=stylesheet" type="text/css" href="style.css">
+	<title>Edelweiss Cosmetics</title>
+</head>
+
+	
 </head>
 <body>
     <nav id="main-nav">
@@ -28,13 +44,24 @@
 	</script>
     <div id="div1">
         <h1 class=fade-in2>Edelweiss Cosmetics</h1>
-     <p class="fade-in2">
+	<p class="heading-- sub mt-3">
 	 Visoko kvalitetna kozmetika koja se proizvodi u Italiji i Nemačkoj. <br>
 	 Niska cena za visoki kvalitet je politika kompanije. <br>
 	 Svi proizvodi pre puštanja u prodaju su laboratoriski testirani. <br>
 	 Testiranja se NE vrše na životinjama. <br>
 	 Mnogi proizvodi su hipoalergijski, vegetabilni, <br>
 	 bez parabena i HALAL sertifikatom.</p>
+	<section id="about-us" class="mt-5">
+	<div class="title2">
+		<h2 class="about-us-heading center-text"> SMINKA ! </h2>
+	<div class="about-us-sides">
+		<div class="about-us--left0side>
+			<p>
+	Edelweiss kozmetika proizvedena je u Italiji i Nemačkoj.
+	Niska cena za visok kvalitet je politika kompanije.
+	Svi proizvodi su laboratorijski ispitani pre stavljanja u prodaju. </p>
+    </div>
+	</div>
 	<form id=form1 class=fade-in1>
         <legend id=leg1>
             Prijavite se
